--- a/vSphere/cloudinit-vm-deploy/templates/original/user-data_template.yaml
+++ b/vSphere/cloudinit-vm-deploy/templates/original/user-data_template.yaml
@@ -12,18 +12,18 @@
 # - Setting "lock_passwd: true" (SSH-key-only user) is NOT supported, as it breaks Phase 2 management (Invoke-VMScript needs password auth).
 # - To allow both password and SSH-key authentication, include both "passwd" and "ssh_authorized_keys".
 
-hostname: ${hostname}              # e.g. original01.production.local
+hostname: {{hostname}}             # e.g. original01.production.local
 
 users:
-  - name: ${username}              # e.g. mainte
+  - name: {{username}}             # e.g. mainte
     gecos: Maintenance User
     groups: wheel,adm,systemd-journal
     # sudo: ALL=(ALL) NOPASSWD:ALL  # (Optional) Uncomment only if you require passwordless sudo for this user
     lock_passwd: false             # DO NOT set true in this framework (see above)
-    passwd: ${password_hash}       # e.g. (see below for hash method)
+    passwd: {{password_hash}}      # e.g. (see below for hash method)
     ssh_authorized_keys:
-      - ${ssh_key1}                # e.g. ssh-rsa AAAAB3... mainte@workstation
-      # - ${ssh_key2}              # (Add more keys if needed)
+      - {{ssh_key1}}               # e.g. ssh-rsa AAAAB3... mainte@workstation
+      # - {{ssh_key2}}             # (Add more keys if needed)
     shell: /bin/bash
 
   # Example: Additional user with password only (no SSH key)
