--- a/vSphere/cloudinit-vm-deploy/templates/original/user-data_template.yaml
+++ b/vSphere/cloudinit-vm-deploy/templates/original/user-data_template.yaml
@@ -19,7 +19,7 @@ users:
     groups: wheel,adm,systemd-journal
     # sudo: ALL=(ALL) NOPASSWD:ALL  # (Optional) Uncomment only if you require passwordless sudo for this user
     lock_passwd: false             # DO NOT set true in this framework (see above)
-    passwd: {{password_hash}}      # e.g. (see below for hash method)
+    passwd: {{password_hash}}      # SHA-512 hashed string (see the main script for hash method)
     ssh_authorized_keys:
       - {{ssh_key1}}               # e.g. ssh-rsa AAAAB3... mainte@workstation
       # - {{ssh_key2}}             # (Add more keys if needed)
