Enable SSH password authentication
Updated SSH password authentication settings in cloud.cfg.

--- a/vSphere/cloudinit-vm-deploy/infra/cloud.cfg
+++ b/vSphere/cloudinit-vm-deploy/infra/cloud.cfg
@@ -22,7 +22,8 @@ users: []
 disable_root: false
 
 mount_default_fields: [~, ~, 'auto', 'defaults,nofail,x-systemd.after=cloud-init-network.service,_netdev', '0', '2']
-ssh_pwauth: false
+# [CHANGED] Do not disable SSH password authentication
+#ssh_pwauth: false
 
 # This will cause the set+update hostname module to not operate (if true)
 # [CHANGED] Template VM: true (overridden by 99-override.cfg:false on clones)
