Include swap resizing command in user data template
Added RESIZESWAP_BLOCK to runcmd section.

--- a/vSphere/cloudinit-vm-deploy/templates/original/user-data_template.yaml
+++ b/vSphere/cloudinit-vm-deploy/templates/original/user-data_template.yaml
@@ -57,6 +57,8 @@ growpart:
 
 runcmd:{{RESIZEFS_BLOCK}}
 
+runcmd:{{RESIZESWAP_BLOCK}}
+
 # Customize hosts file (the file gets thoroughly overwritten)
 write_files:
   - path: /etc/hosts
