--- a/vSphere/cloudinit-vm-deploy/params/vm-settings_example.yaml
+++ b/vSphere/cloudinit-vm-deploy/params/vm-settings_example.yaml
@@ -33,14 +33,22 @@ disks:
   #- name: Hard disk 4
   #  size_gb: 3
 
-# Map device file paths to swap dictionary keys for convenient placeholder substitution in YAML templates (e.g., for growpart devices).
+# Map device file paths to swap dictionary keys for convenient placeholder substitution in YAML templates (e.g., for growpart devices)
 swaps:
   1: /dev/sdb1
  #2: /dev/sdd1
 
-# Device paths to run resize2fs on after partition expansion (workaround for unreliable cloud-init builtin function)
+# Swap devices that must be reformatted in order to resize them (kit-specific extension, not in cloud-init)
+resize_swap:
+  - /dev/sdb1
+  #- /dev/sdd1
+
+# List of device paths to expand filesystems with resize2fs after partition expansion.
+# This is a kit-specific extension, as the standard cloud-init 'resizefs' module only supports the root device.
+# Note: Including the root device (e.g., /dev/sda3) is optional; it will be resized by default.
 resize_fs:
   - /dev/sdc1
+  #- /dev/sda3
 
 # == OS/Cloud-init Parameters ==
 hostname: original01
