Update user-data_template.yaml for cloud-init
Removed resize commands and added user commands in user-data template.

--- a/vSphere/cloudinit-vm-deploy/templates/original/user-data_template.yaml
+++ b/vSphere/cloudinit-vm-deploy/templates/original/user-data_template.yaml
@@ -55,9 +55,7 @@ growpart:
   devices: ['/', '{{swaps.1}}', '/var/crash']
   ignore_growroot_disabled: false
 
-runcmd:{{RESIZEFS_BLOCK}}
-
-runcmd:{{RESIZESWAP_BLOCK}}
+runcmd:{{USER_RUNCMD_BLOCK}}
 
 # Customize hosts file (the file gets thoroughly overwritten)
 write_files:
