--- a/vSphere/cloudinit-vm-deploy/params/vm-settings_example.yaml
+++ b/vSphere/cloudinit-vm-deploy/params/vm-settings_example.yaml
@@ -33,15 +33,11 @@ disks:
   #- name: Hard disk 4
   #  size_gb: 3
 
-# Map device file paths to swap dictionary keys for convenient placeholder substitution in YAML templates (e.g., for growpart devices)
+# Swap devices: their partitions will be expanded (growpart) and the devices reinitialized (mkswap) so the swap fills the enlarged partitions.
+# Use numeric-like keys (1, 2, 3, ...) to ensure stable processing order.
 swaps:
   1: /dev/sdb1
  #2: /dev/sdd1
-
-# Swap devices that must be reformatted in order to resize them (kit-specific extension, not in cloud-init)
-resize_swap:
-  - /dev/sdb1
-  #- /dev/sdd1
 
 # List of device paths to expand filesystems with resize2fs after partition expansion.
 # This is a kit-specific extension, as the standard cloud-init 'resizefs' module only supports the root device.
