--- a/vSphere/cloudinit-vm-deploy/templates/original/user-data_template.yaml
+++ b/vSphere/cloudinit-vm-deploy/templates/original/user-data_template.yaml
@@ -52,7 +52,7 @@ growpart:
   mode: auto
   # List all mount points to be auto-expanded if their backing disk was enlarged in Phase 1.
   # For example: ['/', '/dev/sdb1', '/var/crash']
-  devices: ['/', '{{swaps.1}}', '/var/crash']
+  devices: ['/', {{SWAPS_GROW}}'/var/crash']
   ignore_growroot_disabled: false
 
 runcmd:{{USER_RUNCMD_BLOCK}}
