Update cloud-init wait time description in YAML

--- a/vSphere/cloudinit-vm-deploy/params/vm-settings_example.yaml
+++ b/vSphere/cloudinit-vm-deploy/params/vm-settings_example.yaml
@@ -79,7 +79,7 @@ ssh_key1: "ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEAr..."
 # ssh_key2: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAI..."
 
 # == Script tuning parameters ==
-# How long the script wait for cloud-init completion at the finalization Phase
+# How long the script wait for cloud-init completion at Phase-3 (personalization)
 cloudinit_wait_sec: 600        # Default:600 in the script
 cloudinit_poll_sec: 10         # Default:10
 cloudinit_tools_wait_sec: 60   # VMwareTools wait time in each poll failure; default:60
