--- a/vSphere/cloudinit-vm-deploy/templates/original/network-config_template.yaml
+++ b/vSphere/cloudinit-vm-deploy/templates/original/network-config_template.yaml
@@ -6,7 +6,7 @@ ethernets:
     addresses: ["{{netif1.ip_addr}}/{{netif1.prefix}}"]   # e.g. 192.168.0.10/24
     gateway4: {{netif1.gateway}}                          # e.g. 192.168.0.254
     nameservers:
-      addresses: [{{netif1.dns1}}, {{netif1.dns2}}]       # e.g. 192.168.0.201,192.168.0.202
+      addresses: {{netif1.DNS_ADDRESSES}}                 # e.g. [192.168.0.201, 192.168.0.202]
     dhcp6: false
     ipv6: false
 
