--- a/vSphere/cloudinit-vm-deploy/templates/original/network-config_template.yaml
+++ b/vSphere/cloudinit-vm-deploy/templates/original/network-config_template.yaml
@@ -11,15 +11,18 @@ ethernets:
     ipv6: false
 
   # Example: Second NIC (uncomment and edit as needed)
-  # ens224:
-  #   dhcp4: false
-  #   addresses: ["{{netif2.ip_addr}}/{{netif2.prefix}}"]   # e.g. 10.10.10.101/24
-  #   # gateway4: (Omit unless this NIC should set default gateway)
-  #   # nameservers: (Omit unless custom DNS for this NIC)
+# {{netif2.netdev}}:
+#   dhcp4: false
+#   addresses: ["{{netif2.ip_addr}}/{{netif2.prefix}}"]
+#  #gateway4: {{netif2.gateway}}                          # usually omit for non-primary NICs
+#   nameservers:
+#     addresses: {{netif2.DNS_ADDRESSES}}                 # usually empty for non-primary NICs
+#   dhcp6: false
+#   ipv6: false
 
   # Example: DHCP NIC (rare in this framework, for reference only)
-  # ens256:
-  #   dhcp4: true
+# ens256:
+#   dhcp4: true
 
 # Notes:
 # - Interface names (ens192, ens224, etc.) must match the actual device names in the target VM.
